--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -169,7 +169,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="40dp"
         android:text="0"
         android:textSize="80sp" />
 
@@ -180,11 +180,14 @@
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
-        <Button
+        <ImageView
             android:id="@+id/add"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/add" />
+            android:clickable="true"
+            android:src="@drawable/add_button"
+            android:background="?android:attr/selectableItemBackgroundBorderless"
+            android:layout_centerInParent="true"
+            android:layout_width="100dp"
+            android:layout_height="100dp"/>
 
         <Button
             android:id="@+id/reset"
