--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,21 +7,29 @@
     android:background="@drawable/background_color"
     android:orientation="vertical"
     tools:context=".MainActivity">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="50dp"
-        android:text="@string/app_name"
-        android:textColor="#FFFFFF"
-        android:textSize="22sp" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view"
+    <RelativeLayout
+        android:layout_margin="16dp"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:visibility="gone" />
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_centerInParent="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:text="@string/app_name"
+            android:textColor="#FFFFFF"
+            android:textSize="22sp" />
+
+        <ImageView
+            android:id="@+id/list_icon"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:src="@drawable/list_icon"
+            android:layout_centerVertical="true"
+            android:layout_alignParentEnd="true"/>
+    </RelativeLayout>
+
+
 
     <RelativeLayout
         android:id="@+id/settings_layout"
@@ -84,7 +92,6 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/start"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/start_time" />
@@ -102,12 +109,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:gravity="center_horizontal"
             android:layout_marginStart="10dp"
+            android:gravity="center_horizontal"
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/end"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/end_time" />
@@ -155,7 +161,7 @@
                 android:text="次数" />
 
             <TextView
-                android:id="@+id/count"
+                android:id="@+id/count_total"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
@@ -169,7 +175,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="16dp"
         android:text="0"
         android:textSize="80sp" />
 
@@ -177,27 +183,29 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="32dp"
+
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/add"
-            android:clickable="true"
-            android:src="@drawable/add_button"
-            android:background="?android:attr/selectableItemBackgroundBorderless"
-            android:layout_centerInParent="true"
             android:layout_width="100dp"
-            android:layout_height="100dp"/>
+            android:layout_height="100dp"
+            android:layout_centerInParent="true"
+            android:background="?android:attr/selectableItemBackgroundBorderless"
+            android:clickable="true"
+            android:src="@drawable/add_button" />
 
         <ImageView
             android:id="@+id/reset"
-            android:clickable="true"
             android:layout_width="50dp"
             android:layout_height="50dp"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:background="?android:attr/selectableItemBackgroundBorderless"
+            android:clickable="true"
             android:scaleType="centerCrop"
-            android:src="@drawable/reset"
-            android:background="@color/black"
-            android:layout_alignParentEnd="true" />
+            android:src="@drawable/reset" />
     </RelativeLayout>
 
 
