--- a/app/src/main/res/drawable/list_icon.xml
+++ b/app/src/main/res/drawable/list_icon.xml
@@ -4,12 +4,12 @@
     android:viewportWidth="1024"
     android:viewportHeight="1024">
   <path
-      android:fillColor="#FF000000"
+      android:fillColor="#FFFFFF"
       android:pathData="M756.32,350.54h-467.39c-23.37,0 -42.49,-19.12 -42.49,-42.49s19.12,-42.49 42.49,-42.49h467.39c23.37,0 42.49,19.12 42.49,42.49s-19.12,42.49 -42.49,42.49zM756.32,786.06h-467.39c-23.37,0 -42.49,-19.12 -42.49,-42.49s19.12,-42.49 42.49,-42.49h467.39c23.37,0 42.49,19.12 42.49,42.49s-19.12,42.49 -42.49,42.49z"/>
   <path
-      android:fillColor="#FF000000"
+      android:fillColor="#FFFFFF"
       android:pathData="M851.92,1024H172.08c-72.23,0 -129.59,-57.36 -129.59,-129.59v-764.81C42.49,57.36 99.85,0 172.08,0h679.83c72.23,0 129.59,57.36 129.59,129.59v764.81c0,72.23 -57.36,129.59 -129.59,129.59zM172.08,46.74C125.34,46.74 89.23,84.98 89.23,129.59v764.81C89.23,939.02 125.34,977.26 172.08,977.26h679.83c46.74,0 82.85,-38.24 82.85,-82.85v-764.81c0,-46.74 -38.24,-82.85 -82.85,-82.85H172.08z"/>
   <path
-      android:fillColor="#FF000000"
+      android:fillColor="#FFFFFF"
       android:pathData="M745.69,569.36H278.31c-23.37,0 -42.49,-19.12 -42.49,-42.49s19.12,-42.49 42.49,-42.49h467.39c23.37,0 42.49,19.12 42.49,42.49s-19.12,42.49 -42.49,42.49z"/>
 </vector>
