--- a/app/src/main/res/drawable/background_color_list.xml
+++ b/app/src/main/res/drawable/background_color_list.xml
@@ -3,7 +3,6 @@
     <gradient
         android:bottom="500dp"
         android:angle="90"
-        android:startColor="#FFFFFF"
-        android:centerColor="#58EB9C"
+        android:startColor="#11EEEE"
         android:endColor="#36E87A" />
 </shape>
