--- a/app/src/main/res/layout/recycler_view_item.xml
+++ b/app/src/main/res/layout/recycler_view_item.xml
@@ -28,7 +28,7 @@
                 android:id="@+id/start"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="start time :" />
+                android:text="@string/start_time" />
 
             <TextView
                 android:id="@+id/start_text"
@@ -46,7 +46,7 @@
                 android:id="@+id/end"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="end   time :" />
+                android:text="@string/end_time" />
 
             <TextView
                 android:id="@+id/end_text"
